flux/apps/base/ai/gpu_pod.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ollama-gpu
  namespace: llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama-gpu
  serviceName: ollama-gpu
  template:
    metadata:
      labels:
        app: ollama-gpu
    spec:
      containers:
      - name: ollama
        image: docker.io/ollama/ollama:0.12.11@sha256:3d8a05e3432d50ea57594fabe971e46cc8fe963a0f9f8c40400bd56cd5388e47 # {"$imagepolicy": "flux-system:ollama"} 
        imagePullPolicy: Always
        ports:
        - containerPort: 11434
          name: http
          protocol: TCP
        resources:
          limits:
            nvidia.com/gpu: "1"
          requests:
            cpu: "500m"
            memory: 4Gi
            nvidia.com/gpu: "1"
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /workspace
          name: ollama-data
      nodeSelector:
        nodeclass: gpu
      tolerations:
      - key: gpu
        operator: Equal
        value: "true"
        effect: NoSchedule
      runtimeClassName: nvidia
      securityContext:
        fsGroup: 1000
  volumeClaimTemplates:
  - metadata:
      name: ollama-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 150Gi
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-gpu
  namespace: llm
spec:
  selector:
    app: ollama-gpu
  ports:
    - port: 11434
      targetPort: 11434
      protocol: TCP
      name: http
  type: ClusterIP
